Added boards management functionality

--- a/slicing/index.html
+++ b/slicing/index.html
@@ -18,11 +18,16 @@
     </div>
     <div class="content">
         <div class="bar message-bar">
-            <span class="row-heading">No boards created yet...</span>
+            <div class="boards-list">
+
+                <div class="list-item">
+                    dsfgsdfgsdfg
+                    <button class="tool-button"></button>
+                </div>
+            </div>
             <div class="row">
-                <button class="flex-button-medium">TEST</button>
-                <button class="flex-button-medium">TEST</button>
-                <button class="flex-button-medium">TEST</button>
+                <input type="text" class="flex-input-small flex-width-70" placeholder="Board name...">
+                <button class="flex-button-small uppercase">TEST</button>
             </div>
         </div>
 
