--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 <div class="main-menu">
-    <div class="menu-section side-section">
-        <button class="menu-button boards-list">Boards</button>
-    </div>
+    <div class="menu-section side-section" id="history-block"></div>
     <div class="menu-section">
         <h1 class="heading" id="heading">Trololo Board</h1>
     </div>
