--- a/slicing/index.html
+++ b/slicing/index.html
@@ -7,14 +7,17 @@
     <title>Title</title>
 </head>
 <body>
-    <div class="main-menu">
-        <div class="menu-section side-section">
-            <button class="menu-button boards-list">Boards</button>
+    <div class="main-menu-holder">
+        <div class="main-menu">
+            <div class="menu-section side-section">
+                <button class="menu-button boards-list">Boards</button>
+            </div>
+            <div class="menu-section">
+                <h1 class="heading">Trololo Board</h1>
+            </div>
+            <div class="menu-section side-section"></div>
         </div>
-        <div class="menu-section">
-            <h1 class="heading">Trololo Board</h1>
-        </div>
-        <div class="menu-section side-section"></div>
+
     </div>
     <div class="content">
         <div class="bar message-bar">
