--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
     <title>Trololo</title>
 </head>
 <body>
-<div class="main-menu">
-    <div class="menu-section side-section" id="history-block"></div>
-    <div class="menu-section">
-        <h1 class="heading" id="heading">Trololo Board</h1>
-    </div>
-    <div class="menu-section side-section"></div>
-</div>
+<div id="main-menu-holder"></div>
 <div class="content" id="content">
 
 
