Configuring webpack + typescript + react

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <title>Trololo</title>
 </head>
 <body>
-<div id="main-menu-holder"></div>
-<div class="content" id="content">
-
-
-</div>
-
+    <div id="main-menu-holder"></div>
+    <div class="content" id="content"></div>
 </body>
 </html>
