Adding an ability to select a background image

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,6 @@
     <title>Trololo</title>
 </head>
 <body>
-    <div id="main-menu-holder"></div>
-    <div class="content" id="content"></div>
+    <div id="page-wrap"></div>
 </body>
 </html>
